[package]
name = "is31fl3731-async"
version = "1.0.2"
edition = "2021"
authors = ["Matt Gleich"]
categories = ["embedded", "no-std"]
description = "Driver for Lumissil Microsystem's IS31FL3731 IC"
license = "MIT"
repository = "https://github.com/gleich/is31fl3731"
readme = "README.md"

[dependencies]
embedded-hal-async = "1.0.0"

[features]
charlie_bonnet = []
charlie_wing = []
keybow_2040 = []
led_shim = []
matrix = []
rgb_matrix_5x5 = []
scroll_phat_hd = []
